<resources>
    <string name="app_name">LoginApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="communication">Communication</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="login">Login</string>
    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="trash">Trash</string>
    <string name="message">Message</string>
    <string name="home">Home</string>
    <string name="synch">Synch</string>
</resources>