<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/message" />

    <item
        android:id="@+id/nav_synch"
        android:icon="@drawable/ic_baseline_sync_24"
        android:title="@string/synch" />

    <item
        android:id="@+id/nav_trash"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/trash" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting" />
    </group>


    <group  android:checkableBehavior="single">

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/login"
                android:title="@string/login" />
        </menu>
    </item>
    </group>


    <group  android:checkableBehavior="single">
    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_baseline_rate_review_24"
                android:title="@string/rate_us" />
        </menu>

    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/log_out" />
    </group>



</menu>